tests/res/types/error_accessor.say
// Catch-all `get`/`set` accessors were removed.
type A {
    get(prop) { // error: Unexpected token: Expected ';' but found '('
        return prop;
    }
}
